WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266420
[WebGPU] CTS validation/debugMarker test does not pass
https://bugs.webkit.org/show_bug.cgi?id=266420
Summary
[WebGPU] CTS validation/debugMarker test does not pass
Mike Wyrzykowski
Reported
2023-12-14 09:58:50 PST
[WebGPU] CTS validation/debugMarker test does not pass
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-14 09:59:05 PST
<
rdar://problem/119673064
>
Mike Wyrzykowski
Comment 2
2023-12-14 11:03:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21813
EWS
Comment 3
2023-12-14 18:49:41 PST
Committed
272092@main
(a286596dc032): <
https://commits.webkit.org/272092@main
> Reviewed commits have been landed. Closing PR #21813 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug