[WebGPU] CTS validation/debugMarker test does not pass https://bugs.webkit.org/show_bug.cgi?id=266420 <radar://119673064>

Reviewed by Dan Glastonbury.

Correct validation for debugMarkers and add passing expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/debugMarker-expected.txt:
* Source/WebGPU/WebGPU/CommandEncoder.h:
(WebGPU::CommandEncoder::makeInvalid):
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::validateFinish const):
* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::endPass):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::endPass):

Canonical link: https://commits.webkit.org/272092@main