Source/WebGPU/WebGPU/ComputePassEncoder.mm
@@ -110,6 +110,11 @@ void ComputePassEncoder::endPass()
         return;
     }
 
+    if (m_debugGroupStackSize || !isValid()) {
+        m_parentEncoder->makeInvalid();
+        return;
+    }
+
     ASSERT(m_pendingTimestampWrites.isEmpty() || m_device->baseCapabilities().counterSamplingAPI == HardwareCapabilities::BaseCapabilities::CounterSamplingAPI::CommandBoundary);
     for (const auto& pendingTimestampWrite : m_pendingTimestampWrites)
         [m_computeCommandEncoder sampleCountersInBuffer:pendingTimestampWrite.querySet->counterSampleBuffer() atSampleIndex:pendingTimestampWrite.queryIndex withBarrier:NO];
